_css/main.scss
/* ... */
.adv {
  background-color: lightgray;
  margin-top: 20px;
  margin-bottom: 20px;
}

#adblock-alert {
  display: none;
}







.index-content a:hover{
  color:black;
  text-decoration:none;
}
.index-content{
  margin-bottom:20px;
  padding:50px 0px;

}
.index-content .row{
  margin-top:20px;
}
.index-content a{
  color: black;
}
.index-content .cards {
  display: flex;
  width: 100%;
}
.index-content .card{
  background-color: #FFFF00;
  padding:0;
  margin: 10px;
  width: 30%;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius:4px;
  box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.3);

}
.index-content .card:hover{
  box-shadow: 0 16px 24px 2px rgba(0,0,0,0.14), 0 6px 30px 5px rgba(0,0,0,0.12), 0 8px 10px -5px rgba(0,0,0,0.3);
  color:black;
}
.index-content .card .img{
  width: 100%;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  min-height: 200px;
}
.index-content .card h4{
  margin:20px;
}
.index-content .card p{
  margin:20px;
  opacity: 0.65;
  text-overflow: ellipsis;
}
.index-content .blue-button{
  -webkit-transition: background-color 1s , color 1s; /* For Safari 3.1 to 6.0 */
  transition: background-color 1s , color 1s;
  min-height: 20px;
  background-color: #002E5B;
  color: #ffffff;
  border-radius: 4px;
  text-align: center;
  font-weight: lighter;
  margin: 0px 20px 15px 20px;
  padding: 5px 0px;
  display: inline-block;
}
.index-content .blue-button:hover{
  background-color: #dadada;
  color: #002E5B;
}
@media (max-width: 768px) {

  .index-content .col-lg-4 {
    margin-top: 20px;
  }
}

